# strava-insights

./: .editorconfig  .eslintrc.js  README.md  activities.csv  package-lock.json  package.json  plot.py  pyproject.toml  tsconfig.json
.github/workflows/: wf.yml
data/: activities.csv  activity_data.csv  manual_activities.csv  manual_entries.csv  manual_entries.txt
src/: calc.js  calc.ts  convert_data.py  index.ts  plot.py  plot.ts
test/: test_convert_data.py
