[tool.poetry]
name = "strava-insights"
version = "0.1.0"
description = "Analysis and visualization of Strava activities"
authors = ["Gustav Rasmussen <gcr84@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.5.1"
ruff = "^0.0.285"
isort = "^5.12.0"
black = "^23.7.0"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
seaborn = "^0.12.2"
icecream = "^2.1.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
