[tool.poetry]
name = "strava-insights"
version = "0.0.1"
description = "Analysis and visualization of Strava activities"
authors = ["Gustav Rasmussen"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.18.2"
ruff = "^0.13.3"
isort = "^6.0.1"
black = "^25.1.0"
matplotlib = "^3.10.5"
pandas = "^2.3.3"
seaborn = "^0.13.2"
icecream = "^2.1.5"
pytest = "^7.4.3"
pytest-cov = "^7.0.0"
datetime-convertion-tools = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
