[tool.poetry]
name = "strava-insights"
version = "0.0.1"
description = "Analysis and visualization of Strava activities"
authors = ["Gustav Rasmussen"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.18.2"
ruff = "^0.14.3"
isort = "^7.0.0"
black = "^25.1.0"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
seaborn = "^0.13.2"
icecream = "^2.1.8"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
datetime-convertion-tools = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
